KOR translation Update 02/03/23

--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -1369,8 +1369,8 @@
   },
   "aigisMod:Isabelle": {
     "NAME": "이사벨라",
-    "DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다, 적을 쓰러뜨린 경우 [E] 를 얻습니다. NL 이 카드의 데미지가 !M! 감소합니다.",
-    "UPGRADE_DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다, 적을 쓰러뜨린 경우 [E] 를 얻습니다. NL 이 카드의 데미지가 !M! 감소합니다.",
+    "DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. 적을 쓰러뜨린 경우 [E] 를 얻습니다. NL 이 카드의 데미지가 !M! 감소합니다.",
+    "UPGRADE_DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. 적을 쓰러뜨린 경우 [E] 를 얻습니다. NL 이 카드의 데미지가 !M! 감소합니다.",
     "EXTENDED_DESCRIPTION" : [
       "제국 천마기사"
     ]
@@ -1523,8 +1523,8 @@
   },
   "aigisMod:Meer": {
     "NAME": "메아",
-    "DESCRIPTION": "!D! 데미지를 가합니다, 적을 쓰러뜨린 경우 [E] 를 얻습니다. NL 만약 적이 공격할 의도를 갖고 있다면 !M! 데미지를 추가로 가합니다.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다, 적을 쓰러뜨린 경우 [E] [E] 를 얻습니다. NL 만약 적이 공격할 의도를 갖고 있다면 !M! 데미지를 추가로 가합니다.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. 적을 쓰러뜨린 경우 [E] 를 얻습니다. NL 만약 적이 공격할 의도를 갖고 있다면 !M! 데미지를 추가로 가합니다.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. 적을 쓰러뜨린 경우 [E] [E] 를 얻습니다. NL 만약 적이 공격할 의도를 갖고 있다면 !M! 데미지를 추가로 가합니다.",
     "EXTENDED_DESCRIPTION" : [
       "제국 창기사"
     ]
@@ -2114,7 +2114,7 @@
     "UPGRADE_DESCRIPTION": "모든 적에게 !D! 데미지를 가합니다. 타겟이 둔화 상태인 경우 힘을 !M! 얻습니다. NL 시공 포션을 1 개 얻습니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       "제국 공병",
-      "모든 적에게 !D! 데미지를 가합니다, 타겟이 둔화 상태인 경우 힘을 !M! 얻습니다. NL 시공 포션을 1 개 얻습니다. NL 소멸."
+      "모든 적에게 !D! 데미지를 가합니다. 타겟이 둔화 상태인 경우 힘을 !M! 얻습니다. NL 시공 포션을 1 개 얻습니다. NL 소멸."
     ]
   },
   "aigisMod:Margot": {
@@ -3648,8 +3648,8 @@
   },
   "aigisMod:Erun": {
     "NAME": "엘룬",
-    "DESCRIPTION": "카드를 !M! 장 뽑습니다, 카드를 1 장 버립니다. NL aigismod:봉인해제 : 뽑을 카드 더미에서 봉인해제 카드 1 장을 손패로 가져옵니다.",
-    "UPGRADE_DESCRIPTION": "카드를 !M! 장 뽑습니다, 카드를 1 장 버립니다. NL aigismod:봉인해제 : 뽑을 카드 더미에서 봉인해제 카드 1 장을 손패로 가져옵니다.",
+    "DESCRIPTION": "카드를 !M! 장 뽑습니다. 카드를 1 장 버립니다. NL aigismod:봉인해제 : 뽑을 카드 더미에서 봉인해제 카드 1 장을 손패로 가져옵니다.",
+    "UPGRADE_DESCRIPTION": "카드를 !M! 장 뽑습니다. 카드를 1 장 버립니다. NL aigismod:봉인해제 : 뽑을 카드 더미에서 봉인해제 카드 1 장을 손패로 가져옵니다.",
     "EXTENDED_DESCRIPTION": [
       "타천사"
     ]
