fixed JPN translation 28/05/23

--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -117,7 +117,7 @@
       "戦闘勝利時に、 #b1 ポイント獲得する。 ",
       "マップ画面（戦闘/イベント/キャンプ以外）で、 #b200 #yゴールド と #b5 ポイントを持っている場合、このレリックを #y右クリック する と 好きな #yアンコモン #y英傑 カード1枚と交換できる。 すでに所持している同名カード(レア含む)は代わりにアップグレードする。",
       "使うことができない…",
-      "200ゴールドと5ポイントを消費してでデッキに加えるカードを選択。"
+      "200ゴールドと5ポイントを消費してデッキに加えるカードを選択。"
     ]
   },
   "aigisMod:DescendantHero": {
@@ -165,7 +165,7 @@
     "FLAVOR": "「お前達に力を貸してやる。……有難く思うのだな。」ラピス",
     "DESCRIPTIONS": [
       "戦闘開始から #b5 ターンの間、 #yダメージオーラ #b1 を得る。",
-      " NL ターン終了時に #yデーモン のパワーカードをプレイしていた時、 #yダメージオーラ と等しい #yブロック を得る。"
+      " NL #yデーモン のパワーカードをプレイしたターン終了時に、 #yダメージオーラ と等しい #yブロック を得る。"
     ]
   },
   "aigisMod:ImperialAgent": {
@@ -328,7 +328,7 @@
     "NAME": "蛇霊の呪毒",
     "FLAVOR": "「まじないは毒にも薬にもなるの。ふふふ、これはどちらかしらぁ？」-オロチヒメ",
     "DESCRIPTIONS": [
-      "戦闘開始時、 全ての敵に #yカースボイス #b2 を与える。 敵を攻撃した時、 #y毒 #b1 を与える。"
+      "戦闘開始時、 全ての敵に #yカースボイス #b2 を与える。 敵が攻撃した時、 #y毒 #b1 を与える。"
     ]
   },
   "aigisMod:Ifrit": {
