--- a/localization/jpn/AigisMod-Card-Strings.json
+++ b/localization/jpn/AigisMod-Card-Strings.json
@@ -982,7 +982,7 @@
   "aigisMod:Rindou": {
     "NAME": "リンドウ",
     "DESCRIPTION": "引いた時、 5 固定の ブロック を得る。 NL !D! ダメージを与える。",
-    "UPGRADE_DESCRIPTION": "引いた時、 7 固定の ブロック を得る。 NL デッキにリンドウ以外のコスト4カードがある時、このカードのコストは1減少する。 NL !D! ダメージを与える",
+    "UPGRADE_DESCRIPTION": "引いた時、 7 固定の ブロック を得る。 NL デッキ内のコスト4の異なる名のカードがあるならこのカードのコストは 1 減少する。  NL !D! ダメージを与える",
     "EXTENDED_DESCRIPTION" : [
       "蒼角の鬼娘"
     ]
@@ -1310,7 +1310,7 @@
   "aigisMod:Kokoro": {
     "NAME": "ココロ",
     "DESCRIPTION": "カードを 2 枚引く。 NL 全ての敵に NL aigismod:鈍足 を与える。 NL aigismod:クールタイム : !M! : NL ランダムな敵 1 体をスタンさせる",
-    "UPGRADE_DESCRIPTION": "カードを 2 枚引く。 NL 全ての敵に NL aigismod:鈍足 2 を与える。 NL aigismod:クールタイム : !M! : NL ランダムな敵1体をスタンさせる",
+    "UPGRADE_DESCRIPTION": "カードを 2 枚引く。 NL 全ての敵に NL aigismod:鈍足 を与える。 NL aigismod:クールタイム : !M! : NL ランダムな敵1体をスタンさせる",
     "EXTENDED_DESCRIPTION" : [
       "時の魔女"
     ]
@@ -3738,7 +3738,7 @@
   },
   "aigisMod:Regina": {
     "NAME": "レギーナ",
-    "DESCRIPTION": "!D! aigismod:拡散 ダメージを与える。 NL aigismod:堅牢 : 6: このカードを二回プレイする。 NL 廃棄",
+    "DESCRIPTION": "!D! aigismod:拡散 ダメージを与える。 NL aigismod:堅牢 :6: このカードを二回プレイする。 NL 廃棄",
     "UPGRADE_DESCRIPTION": "!D! aigismod:拡散 ダメージを与える。 NL aigismod:堅牢 :6: このカードを二回プレイする。 NL 廃棄",
     "EXTENDED_DESCRIPTION": [
       "重装砲兵"
